# semantic-catalogue-demo

./: pyproject.toml  requirements.txt
config/: config.toml
src/: datastore.py  model.py  query_api.py
src/common/: utils.py
